# rules_venv

./: .bazelignore  .bazelrc  .gitignore  .isort.cfg  .mypy.ini  .pylintrc.toml  .ruff.toml  404.html  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  black.html  extensions.html  global_venv.html  index.html  isort.html  module_extension.html  mypy.html  print.html  pylint.html  pyrightconfig.json  pytest.html  ruff.html  rules.html  searchindex.js  searchindex.json  toc.html  toc.js  venv.html  version.bzl  wheel.html
docs/: BUILD.bazel  book.toml
docs/src/: SUMMARY.md  extensions.md  index.md
examples/binary_consumer/: BUILD.bazel  MODULE.bazel  README.md
python/: BUILD.bazel  defs.bzl  py_binary.bzl  py_info.bzl  py_library.bzl  py_test.bzl
python/black/: BUILD.bazel  defs.bzl  py_black_aspect.bzl  py_black_test.bzl  py_black_toolchain.bzl  pyproject.toml  repositories.bzl
python/black/private/: BUILD.bazel  black.bzl  black_fixer.py  black_runner.py  black_toolchain.bzl
python/black/toolchain/: BUILD.bazel
python/extensions/: python.bzl
python/global_venv/: BUILD.bazel  defs.bzl  py_global_venv.bzl  py_global_venv_aspect.bzl
python/global_venv/private/: BUILD.bazel  global_venv.bzl  global_venv.py
python/isort/: .isort.cfg  BUILD.bazel  defs.bzl  py_isort_aspect.bzl  py_isort_test.bzl  py_isort_toolchain.bzl  repositories.bzl
python/isort/private/: BUILD.bazel  isort.bzl  isort_fixer.py  isort_runner.py  isort_toolchain.bzl
python/isort/private/tests/: BUILD.bazel  isort_regex_test.bzl  isort_regex_test.py
python/isort/private/tests/simple/: BUILD.bazel  example.py  first_party_1.py
python/isort/toolchain/: BUILD.bazel
python/module_extension/: BUILD.bazel  defs.bzl  py_cc_extension.bzl
python/module_extension/private/: BUILD.bazel  cc_extension.bzl
python/module_extension/private/tests/compilation_modes/: BUILD.bazel  string_sum_current.cc  string_sum_current_test.py
python/module_extension/private/tests/imports/: BUILD.bazel  string_sum_import.cc  string_sum_import_test.py
python/module_extension/private/tests/simple/: BUILD.bazel  string_sum.cc  string_sum_test.py
python/mypy/: .mypy.ini  BUILD.bazel  defs.bzl  py_mypy_aspect.bzl  py_mypy_test.bzl  py_mypy_toolchain.bzl  repositories.bzl
python/mypy/private/: BUILD.bazel  mypy.bzl  mypy_runner.py  mypy_toolchain.bzl
python/mypy/private/tests/generated_input/: BUILD.bazel  source.py
python/mypy/private/tests/generated_stubs/: BUILD.bazel  consumer.py  untyped.py
python/mypy/private/tests/simple/: BUILD.bazel  consumer.py  thrice.py
python/mypy/toolchain/: BUILD.bazel
python/pex/: BUILD.bazel  defs.bzl  extensions.bzl
python/pex/constraints/: BUILD.bazel
python/pex/private/: BUILD.bazel  pex.bzl  pex_process_wrapper.py  pex_resource_set.bzl  pex_toolchain.bzl  pex_tools_repo.bzl  pex_versions.bzl  scie_cache_generator.py  scie_jump_versions.bzl  scie_ptex_versions.bzl  scie_python_versions.bzl  scie_science_repo.bzl  scie_science_versions.bzl  update_pex_versions.py  update_python_versions.py  update_scie_science_versions.py
python/pex/private/tests/basic/: BUILD.bazel  basic.py
python/pex/private/tests/data/: BUILD.bazel  data.py
python/pex/private/tests/data_generated/: BUILD.bazel  data.py
python/pex/toolchain/: BUILD.bazel
python/private/: BUILD.bazel  README.md  coverage.bzl  target_srcs.bzl
python/private/coverage/: BUILD.bazel
python/pylint/: BUILD.bazel  defs.bzl  py_pylint_aspect.bzl  py_pylint_test.bzl  py_pylint_toolchain.bzl  pylintrc.toml  repositories.bzl
python/pylint/private/: BUILD.bazel  pylint.bzl  pylint_runner.py  pylint_toolchain.bzl
python/pylint/private/tests/generated_input/: BUILD.bazel  source.py
python/pylint/private/tests/greeting/: BUILD.bazel
python/pylint/private/tests/imports/: BUILD.bazel  fibonacci_import_test.py
python/pylint/private/tests/printer/: BUILD.bazel  printer.py
python/pylint/toolchain/: BUILD.bazel
python/pytest/: BUILD.bazel  current_py_pytest_toolchain.bzl  defs.bzl  py_pytest_test.bzl  py_pytest_test_suite.bzl  py_pytest_toolchain.bzl  pyproject.toml  requirements.in
python/pytest/private/: BUILD.bazel  entrypoint_sanitizer.py  pytest.bzl  pytest_process_wrapper.py  pytest_utils.bzl
python/pytest/private/tests/: BUILD.bazel  pytest_process_wrapper_test.py
python/pytest/private/tests/env/: BUILD.bazel  env_test.py
python/pytest/private/tests/label_tests/: BUILD.bazel  pytest_label_test.bzl  pytest_label_test.py
python/pytest/private/tests/shard/: BUILD.bazel  shard_test.py
python/pytest/private/tests/tempdir/: BUILD.bazel  tempdir_test.py
python/pytest/private/tests/template_variable_info/: BUILD.bazel  template_variable_info_test.py
python/pytest/private/tests/with_args/: BUILD.bazel  README.md
python/pytest/private/tests/xdist/: BUILD.bazel  xdist_test.py
python/pytest/settings/: BUILD.bazel
python/pytest/toolchain/: BUILD.bazel
python/ruff/: BUILD.bazel  defs.bzl  py_ruff_aspect.bzl  py_ruff_check_test.bzl  py_ruff_format_test.bzl  py_ruff_test.bzl  py_ruff_toolchain.bzl
python/ruff/fix/: BUILD.bazel
python/ruff/format/: BUILD.bazel
python/ruff/private/: BUILD.bazel  py_ruff_mode_flag.bzl  ruff.bzl  ruff_fixer.py  ruff_runner.py  ruff_toolchain.bzl
python/ruff/private/tests/generated_input/: BUILD.bazel  source.py
python/ruff/private/tests/greeting/: BUILD.bazel
python/ruff/toolchain/: BUILD.bazel
python/runfiles/: BUILD.bazel
python/ty/: BUILD.bazel  defs.bzl  py_ty_aspect.bzl  py_ty_test.bzl  py_ty_toolchain.bzl  ty.toml
python/ty/private/: BUILD.bazel  ty.bzl  ty_runner.py  ty_toolchain.bzl
python/ty/private/tests/: BUILD.bazel  lib.py  lib_test.py  main.py
python/ty/toolchain/: BUILD.bazel
python/wheel/: BUILD.bazel  defs.bzl  package_tag.bzl  py_wheel_library.bzl  py_wheel_publisher.bzl  py_wheel_toolchain.bzl
python/wheel/private/: BUILD.bazel  requires_parser.py  twine_process_wrapper.py  wheel.bzl
python/wheel/private/tests/: BUILD.bazel
python/wheel/toolchain/: BUILD.bazel
tools/buildifier/: BUILD.bazel
(+66 files in other folders)
