exports_files(
    [
        "MODULE.bazel",
        "version.bzl",
    ],
    visibility = ["//visibility:public"],
)

exports_files(
    [
        ".isort.cfg",
        ".mypy.ini",
        ".pylintrc.toml",
    ],
    visibility = ["//visibility:private"],
)

alias(
    name = "buildifier",
    actual = "//tools/buildifier:buildifier",
)

alias(
    name = "buildifier_check",
    actual = "//tools/buildifier:buildifier_check",
)
