"""periareon/rules_venv"""

module(
    name = "rules_venv",
    version = "0.1.0",
)

bazel_dep(
    name = "rules_python",
    version = "1.0.0",
)
bazel_dep(
    name = "platforms",
    version = "0.0.11",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)

register_toolchains(
    "//python/venv/toolchain",
)

bazel_dep(
    name = "rules_req_compile",
    version = "1.0.0rc29",
    dev_dependency = True,
)
bazel_dep(
    name = "stardoc",
    version = "0.7.2",
    dev_dependency = True,
    repo_name = "io_bazel_stardoc",
)
bazel_dep(
    name = "rules_rust_mdbook",
    version = "0.57.0",
    dev_dependency = True,
)

requirements = use_extension("@rules_req_compile//extensions:python.bzl", "requirements", dev_dependency = True)
requirements.parse(
    name = "pip_deps",
    requirements_locks = {
        "@//python/venv/private/tests/external_deps:requirements_linux.txt": "@platforms//os:linux",
        "@//python/venv/private/tests/external_deps:requirements_macos.txt": "@platforms//os:macos",
        "@//python/venv/private/tests/external_deps:requirements_windows.txt": "@platforms//os:windows",
    },
)
use_repo(requirements, "pip_deps")

bazel_dep(name = "buildifier_prebuilt", version = "7.3.1", dev_dependency = True)
