workspace(name = "rules_venv")

load("//python/venv:repositories.bzl", "rules_venv_dependencies", "venv_register_toolchains")

rules_venv_dependencies()

venv_register_toolchains()

load("//python/venv:repositories_transitive.bzl", "rules_venv_transitive_deps")

rules_venv_transitive_deps()

################################################################################
## INTERNAL
################################################################################

load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python311",
    python_version = "3.11",
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_req_compile",
    sha256 = "7c1212e39cf85aa89c887c7bebab6f1b2ebae024a42ca2e3d707e0046cd65a60",
    urls = ["https://github.com/periareon/req-compile/releases/download/1.0.0rc29/rules_req_compile-1.0.0rc29.tar.gz"],
)

load("@rules_req_compile//:repositories.bzl", "req_compile_dependencies")

req_compile_dependencies()

load("@rules_req_compile//:repositories_transitive.bzl", "req_compile_transitive_dependencies")

req_compile_transitive_dependencies()

load("@rules_req_compile//:defs.bzl", "py_requirements_repository")

py_requirements_repository(
    name = "pip_deps",
    requirements_locks = {
        "@//python/venv/private/tests/external_deps:requirements_linux.txt": "@platforms//os:linux",
        "@//python/venv/private/tests/external_deps:requirements_macos.txt": "@platforms//os:macos",
        "@//python/venv/private/tests/external_deps:requirements_windows.txt": "@platforms//os:windows",
    },
)

load("@pip_deps//:defs.bzl", pip_deps_repositories = "repositories")

pip_deps_repositories()

http_archive(
    name = "io_bazel_stardoc",
    sha256 = "62bd2e60216b7a6fec3ac79341aa201e0956477e7c8f6ccc286f279ad1d96432",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/stardoc/releases/download/0.6.2/stardoc-0.6.2.tar.gz",
        "https://github.com/bazelbuild/stardoc/releases/download/0.6.2/stardoc-0.6.2.tar.gz",
    ],
)

load("@io_bazel_stardoc//:setup.bzl", "stardoc_repositories")

stardoc_repositories()

load("@rules_jvm_external//:repositories.bzl", "rules_jvm_external_deps")

rules_jvm_external_deps()

load("@rules_jvm_external//:setup.bzl", "rules_jvm_external_setup")

rules_jvm_external_setup()

load("@io_bazel_stardoc//:deps.bzl", "stardoc_external_deps")

stardoc_external_deps()

load("@stardoc_maven//:defs.bzl", stardoc_pinned_maven_install = "pinned_maven_install")

stardoc_pinned_maven_install()
