load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
load("@rules_rust_mdbook//:defs.bzl", "mdbook", "mdbook_server")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

stardoc(
    name = "venv",
    out = "src/venv.md",
    input = "//python/venv:defs.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    # TODO: https://github.com/bazelbuild/stardoc/issues/110
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = ["//python/venv:bzl_lib"],
)

stardoc(
    name = "wheel",
    out = "src/wheel.md",
    input = "//python/wheel:defs.bzl",
    table_of_contents_template = "@io_bazel_stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    # TODO: https://github.com/bazelbuild/stardoc/issues/110
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = ["//python/wheel:bzl_lib"],
)

mdbook(
    name = "book",
    srcs = glob(["src/**/*.md"]) + [
        ":venv",
        ":wheel",
    ],
    book = "book.toml",
)

alias(
    name = "docs",
    actual = ":book",
)

mdbook_server(
    name = "server",
    book = ":book",
)

sh_binary(
    name = "publish_book",
    srcs = ["publish_book.sh"],
    data = [":book"],
    env = {"BOOK_DIR": "$(rootpath :book)"},
)
