load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "defs_bzl",
    srcs = [
        "defs.bzl",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//python/venv:bzl_lib",
        "@rules_python//python:defs_bzl",
    ],
)

alias(
    name = "bzl_lib",
    actual = ":defs_bzl",
    visibility = ["//visibility:public"],
)

alias(
    name = "toolchain_type",
    actual = "@rules_python//python:toolchain_type",
    visibility = ["//visibility:public"],
)
