load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "defs.bzl",
    "py_ruff_aspect.bzl",
    "py_ruff_check_test.bzl",
    "py_ruff_format_test.bzl",
    "py_ruff_test.bzl",
    "py_ruff_toolchain.bzl",
])

bzl_library(
    name = "defs_bzl",
    srcs = [
        "defs.bzl",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":py_info_bzl",
        "//python/venv:bzl_lib",
        "@rules_python//python:defs_bzl",
    ],
)

bzl_library(
    name = "py_info_bzl",
    srcs = [
        "py_info.bzl",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@rules_python//python:py_info_bzl",
    ],
)

alias(
    name = "bzl_lib",
    actual = ":defs_bzl",
    visibility = ["//visibility:public"],
)

alias(
    name = "toolchain_type",
    actual = "@rules_python//python:toolchain_type",
    visibility = ["//visibility:public"],
)
