load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//python/black/private:black_toolchain.bzl", "current_py_black_toolchain")

package(default_visibility = ["//visibility:public"])

exports_files([
    "pyproject.toml",
    "defs.bzl",
    "py_black_aspect.bzl",
    "py_black_test.bzl",
    "py_black_toolchain.bzl",
    "requirements.in",
])

label_flag(
    name = "config",
    build_setting_default = ":pyproject.toml",
)

toolchain_type(
    name = "toolchain_type",
)

current_py_black_toolchain(
    name = "current_py_black_toolchain",
    tags = ["manual"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
    deps = ["//python/black/private:bzl_lib"],
)

alias(
    name = "black",
    actual = "//python/black/private:black_fixer",
)
