load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//python/global_venv/private:global_venv.bzl", "global_venv")

exports_files([
    "defs.bzl",
])

global_venv(
    name = "global_venv",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
    deps = ["//python/global_venv/private:bzl_lib"],
)
