load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//python/mypy/private:mypy_toolchain.bzl", "current_py_mypy_toolchain")

package(default_visibility = ["//visibility:public"])

exports_files([
    ".mypy.ini",
    "defs.bzl",
    "py_mypy_aspect.bzl",
    "py_mypy_test.bzl",
    "py_mypy_toolchain.bzl",
    "requirements.in",
])

label_flag(
    name = "config",
    build_setting_default = ":.mypy.ini",
)

toolchain_type(
    name = "toolchain_type",
)

current_py_mypy_toolchain(
    name = "current_py_mypy_toolchain",
    tags = ["manual"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
    deps = ["//python/mypy/private:bzl_lib"],
)
