load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//python/pex/private:pex_toolchain.bzl", "current_py_pex_toolchain")

package(default_visibility = ["//visibility:public"])

exports_files([
    "defs.bzl",
    "requirements.in",
])

toolchain_type(
    name = "toolchain_type",
)

current_py_pex_toolchain(
    name = "current_py_pex_toolchain",
    tags = [
        "manual",
        "no-format",
        "no-lint",
    ],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    deps = ["//python/pex/private:bzl_lib"],
)
