load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//python/pylint/private:pylint_toolchain.bzl", "current_py_pylint_toolchain")

package(default_visibility = ["//visibility:public"])

exports_files([
    "pylintrc.toml",
    "defs.bzl",
    "py_pylint_aspect.bzl",
    "py_pylint_test.bzl",
    "py_pylint_toolchain.bzl",
    "requirements.in",
])

label_flag(
    name = "config",
    build_setting_default = ":pylintrc.toml",
)

toolchain_type(
    name = "toolchain_type",
)

current_py_pylint_toolchain(
    name = "current_py_pylint_toolchain",
    tags = ["manual"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
    deps = ["//python/pylint/private:bzl_lib"],
)
