load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//python/ty/private:ty_toolchain.bzl", "current_py_ty_toolchain")

package(default_visibility = ["//visibility:public"])

exports_files([
    "ty.toml",
    "defs.bzl",
    "py_ty_aspect.bzl",
    "py_ty_test.bzl",
    "py_ty_toolchain.bzl",
    "requirements.in",
])

label_flag(
    name = "config",
    build_setting_default = ":ty.toml",
)

toolchain_type(
    name = "toolchain_type",
)

current_py_ty_toolchain(
    name = "current_py_ty_toolchain",
    tags = ["manual"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
    deps = ["//python/ty/private:bzl_lib"],
)
