load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "defs.bzl",
    "package_tag.bzl",
    "py_wheel_library.bzl",
    "py_wheel_publisher.bzl",
    "py_wheel_toolchain.bzl",
    "requirements.in",
])

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
    deps = ["//python/wheel/private:bzl_lib"],
)
