load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_venv//python:defs.bzl", "py_binary", "py_library")

exports_files([
    "black_runner.py",
])

py_library(
    name = "black_runner",
    srcs = ["black_runner.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//python/black:current_py_black_toolchain",
        "@rules_venv//python/runfiles",
    ],
)

py_binary(
    name = "black_fixer",
    srcs = ["black_fixer.py"],
    data = [
        "//python/black:config",
    ],
    env = {
        "BLACK_SETTINGS_PATH": "$(rlocationpath //python/black:config)",
    },
    visibility = ["//visibility:public"],
    deps = [
        "//python/black:current_py_black_toolchain",
        "@rules_venv//python/runfiles",
    ],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//python/black:__subpackages__"],
    deps = [
        "@rules_venv//python:bzl_lib",
        "@rules_venv//python/venv:bzl_lib",
    ],
)
