load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//python:defs.bzl", "py_binary", "py_library")

exports_files([
    "black_runner.py",
])

py_library(
    name = "black_runner",
    srcs = ["black_runner.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//python/black:current_py_black_toolchain",
        "//python/runfiles",
    ],
)

py_binary(
    name = "black_fixer",
    srcs = ["black_fixer.py"],
    data = [
        "//python/black:config",
    ],
    env = {
        "BLACK_SETTINGS_PATH": "$(rlocationpath //python/black:config)",
    },
    visibility = ["//visibility:public"],
    deps = [
        "//python/black:current_py_black_toolchain",
        "//python/runfiles",
    ],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//python/black:__subpackages__"],
    deps = [
        "//python:bzl_lib",
        "//python/venv:bzl_lib",
    ],
)
