load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "global_venv.py",
])

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//python/global_venv:__subpackages__"],
    deps = [
        "@rules_venv//python:bzl_lib",
        "@rules_venv//python/venv:bzl_lib",
    ],
)
