load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//python:defs.bzl", "py_library")

exports_files([
    "mypy_runner.py",
])

py_library(
    name = "mypy_runner",
    srcs = ["mypy_runner.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//python/mypy:current_py_mypy_toolchain",
        "//python/runfiles",
    ],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//python/mypy:__subpackages__"],
    deps = [
        "//python:bzl_lib",
        "//python/private:bzl_lib",
        "//python/venv:bzl_lib",
    ],
)
