load("//python/mypy:defs.bzl", "py_mypy_toolchain")

py_mypy_toolchain(
    name = "py_mypy_toolchain",
    mypy = "@pip_deps//:mypy",
)

toolchain(
    name = "toolchain",
    toolchain = ":py_mypy_toolchain",
    toolchain_type = "//python/mypy:toolchain_type",
    visibility = ["//visibility:public"],
)
