load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//python:defs.bzl", "py_binary")

exports_files([
    "pex_process_wrapper.py",
])

py_binary(
    name = "pex_process_wrapper",
    srcs = ["pex_process_wrapper.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "scie_cache_generator",
    srcs = ["scie_cache_generator.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "update_pex_versions",
    srcs = ["update_pex_versions.py"],
)

py_binary(
    name = "update_python_versions",
    srcs = ["update_python_versions.py"],
    data = ["//python/pex:current_py_pex_toolchain"],
    env = {"SCIE_SCIENCE_BINARY": "$(SCIE_SCIENCE_RLOCATIONPATH)"},
    toolchains = ["//python/pex:current_py_pex_toolchain"],
    deps = ["//python/runfiles"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//python/pex:__subpackages__"],
    deps = [
        "//python:bzl_lib",
        "//python/private:bzl_lib",
        "//python/venv:bzl_lib",
    ],
)
